add logging; script for run tests

--- a/README
+++ b/README
@@ -5,6 +5,10 @@
 2. Запустить скрипт run_tests_and_watch_in_allure.sh (в корне проекта)
 
 
+
+Логи работы контроллера в папке logs/
+
+
 userNameMask:
 (.*) - все
 (.*[0-9]) - содержащее хотя бы одну цифру
